# NoteFlowDesktop

./: .env  .eslintrc.json  .gitignore  .prettierrc  README.md  database.db  main.js  main.ts  package-lock.json  package.json  preload.js  preload.ts  tsconfig.backend.json  tsconfig.json
addons/: CMakeLists.txt  build.sh
addons/addon.node/: CMakeLists.txt  addon.cpp  make.sh  package-lock.json
addons/addon.stream/: CMakeLists.txt  README.md  make.sh  napi.cpp  stream.cpp  struct.h  task.cpp  task.h
coverage-ts/: index.html  typescript-coverage.json
coverage-ts/assets/: source-file.js
coverage-ts/files/src/: index.tsx.html
doc/: whisper.md  whisper_electron.md
public/: index.html
removed/: preload.js
removed/Node/: Node.jsx  Node.scss
src/: App.js  App.jsx  i18n.js  index.css  index.js  index.tsx
src/apis/: APIs.jsx  APIs.tsx  Yjs.ts
src/assets/: ollama_support.js
src/assets/locales/: en.json  zh_tw.json
src/components/Calendar/: Calendar.jsx
src/components/Colabs/: FlowDescription.jsx
src/components/Common/: ChatGPTIcon.tsx  Loading.scss  Loading.tsx  Mui.jsx  ReactIcon.jsx
src/components/Editor/: Editor.jsx  Editor.scss  EditorSettings.jsx  EditorSettings.scss  EditorToolbar.jsx  EditorToolbar.scss  SuspenseEditor.jsx
src/components/Flow/: Colabs.jsx  Colabs.scss  DefaultNodeStyle.tsx  Edge.jsx  Flow.jsx  Flow.scss  FlowEditor.scss  MiniFlow.jsx  Node.jsx  Node.scss  Node.tsx  NodeBar.jsx  StyleBar.jsx  ToolBar.jsx
src/controller/: electron.js  sqlite.js
src/hooks/: useKeyBoard.jsx
src/pages/: Flow.jsx
src/pages/Login/: Login.jsx  (+1 more)
src/providers/: FlowController.jsx  FlowKeyManager.jsx  FlowManager.jsx  FlowYjsManager.tsx  i18next.jsx  i18next.tsx  questionmark.jsx
(+126 files in other folders)
